Fixed cutoff angle

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,7 +13,7 @@ $secondary-color: #ff3c02;
 $content-padding-h: 6.25vw;
 $content-padding-t: 66px;
 
-$page-header-bg-cutoff: 1180px;
+$page-header-bg-cutoff: 1280px;
 $page-header-bg-cutoff-ratio: $page-header-bg-cutoff / $big-desktop-width;
 
 $btn-outside-size-increase: 13px;
